--- a/css/style.css
+++ b/css/style.css
@@ -136,11 +136,12 @@ body {
   opacity: 0;
   transition: all 0.3s ease-in-out;
   pointer-events: none;
-  display: block;
+  display: none;
   background: var(--modal-bg-dark);
 }
 
 .modal-active {
+  display: block;
   opacity: 1;
   pointer-events: all;
 }
