--- a/css/style.css
+++ b/css/style.css
@@ -773,6 +773,10 @@ body {
   color: var(--c-grey-blue);
   margin-bottom: 30px;
 }
+.callback-form-input-container {
+  display: flex;
+  flex-direction: column;
+}
 
 .callback-form-input-error {
   border: 1px solid red;
@@ -792,6 +796,11 @@ body {
   width: 195px;
 }
 
+.calculator-info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .calculator-descr {
   font-weight: bold;
   font-size: 24px;
@@ -853,6 +862,7 @@ body {
 
 .calculator-form-input-field {
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .calculator-form-input-radio-container {
@@ -1160,12 +1170,16 @@ body {
     margin-top: 10px;
   }
 
+  /* Calculator */
+
   .calculator .container {
     align-items: normal;
     position: relative;
     padding: 20px 20px 90px 20px;
   }
-
+  .calculator-info-container {
+    align-items: flex-start;
+  }
   .calculator-title {
     font-size: 50px;
     line-height: 60px;
@@ -1469,5 +1483,90 @@ body {
     width: 421px;
     height: 455px;
     left: -35px;
+  }
+
+  /* Callback form */
+  .callback-form-title,
+  .callback-form-description {
+    width: 100%;
+  }
+  .callback-form-description {
+    margin-bottom: 50px;
+  }
+  .callback-form-input-container {
+    /* display: flex; */
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+  }
+  .callback-form-input {
+    width: 30%;
+    margin-right: 40px;
+    max-width: 260px;
+  }
+  .callback-form-input:last-child {
+    margin-right: 0;
+    /* padding: 15px 20px; */
+  }
+  .callback-form-submit {
+    width: 260px;
+    padding: 15px 20px;
+  }
+  /* Calculator */
+
+  .calculator .container {
+    flex-direction: row;
+    padding: 150px 10px;
+  }
+  .calculator-info-container {
+    position: relative;
+    margin-right: 20px;
+    box-sizing: border-box;
+    width: calc(100% - 386px - 20px);
+  }
+  .calculator-form {
+    padding: 40px 50px;
+    width: 386px;
+    box-sizing: border-box;
+  }
+  .calculator-title {
+    margin-top: 0;
+    font-size: 70px;
+    line-height: 84px;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  .calculator-descr {
+    text-align: left;
+    z-index: 2;
+  }
+  .calculator-text {
+    margin-top: 20px;
+    width: 348px;
+    z-index: 2;
+  }
+  .callback-icon {
+    top: 360px;
+  }
+  /* Footer */
+  .footer-container {
+    padding-top: 50px;
+  }
+
+  .footer-contacts-container {
+    margin-top: 0;
+  }
+
+  .footer-container .container {
+    max-width: 1160px;
+    justify-content: space-between;
+  }
+  .footer-phone-number {
+    margin-top: 0;
+  }
+  .social-networks-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
   }
 }
